# cite-or-refuse

./: .gitignore  Makefile  README.md  conftest.py  demo.tape  pyproject.toml
.github/workflows/: ci.yml
cite_or_refuse/: __init__.py  answerer.py  cli.py  data.py  judge.py  models.py  retriever.py
cite_or_refuse/eval/: __init__.py  checks.py  runner.py
evalset/: golden.json
tests/: test_answerer.py  test_eval.py  test_judge.py
